Add button for choosing grid size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="button-container">
+    <button id="user-prompt-button">Choose Grid Size</button>
+  </div>
 <div id="grid"></div>
-  
 </body>
 </html>
